# llm-fact-decomposition

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fact_decomposition/: __init__.py  api.py  pipeline.py
src/fact_decomposition/extractors/: extractors.py
src/fact_decomposition/utils/: document_extractor.py
src/fact_decomposition/verifiers/: fact_comparator.py
