[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fact_decomposition"
version = "0.1.0"
description = "A pipeline for decomposing text into facts and detecting hallucinations using LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/DaniBarlund/llm-fact-decomposition"

[tool.poetry.dependencies]
markitdown = "^0.0.1a3"
openai = "^1.60.1"
